13_rideshare/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rideshare
  labels:
    istio-injection: enabled
