13_rideshare/deploy-rideshare-auto-lock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rideshare-lock
  namespace: rideshare
  labels:
    app.kubernetes.io/component: region3
    app.kubernetes.io/instance: rideshare-demo
    app.kubernetes.io/name: rideshare-lock
    app: rideshare-lock
    profiling: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rideshare-lock
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "true"
      labels:
        app.kubernetes.io/component: region3
        app.kubernetes.io/instance: rideshare-demo
        app.kubernetes.io/name: rideshare-lock
        app: rideshare-lock
        profiling: "true"
    spec:
      securityContext: {}
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: true
      containers:
      - name: rideshare-lock
        image: fra.ocir.io/frsjez6mlvwx/slixpublic/ride-share-auto:1.3.1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
        resources:
          requests:
            memory: "8Mi"
            cpu: "50m"
          #limits:
          #  memory: "1024Mi"
          #  cpu: "300m"
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      volumes:
      - emptyDir: {}
        name: tmp
