13_rideshare/deploy-rideshare-load copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rideshare-load
  namespace: rideshare
  labels:
    app.kubernetes.io/component: loader
    app.kubernetes.io/instance: rideshare-demo
    app.kubernetes.io/name: rideshare-load
    app: rideshare-load
    profiling: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rideshare-load
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "true"
      labels:
        app.kubernetes.io/component: loader
        app.kubernetes.io/instance: rideshare-demo
        app.kubernetes.io/name: rideshare-load
        app: rideshare-load
        profiling: "true"
    spec:
      securityContext: {}
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: true
      containers:
      - name: rideshare-load
        image: fra.ocir.io/frsjez6mlvwx/slixpublic/ride-share-load:1.0.2
        imagePullPolicy: Always
        resources:
          requests:
            memory: "8Mi"
            cpu: "50m"
          #limits:
          #  memory: "1024Mi"
          #  cpu: "300m"
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      volumes:
      - emptyDir: {}
        name: tmp
