13_rideshare/deploy-rideshare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rideshare
  namespace: rideshare
  labels:
    app: rideshare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rideshare
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "true"
      labels:
        app: rideshare
    spec:
      securityContext: {}
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: true
      containers:
      - name: rideshare
        image: fra.ocir.io/frsjez6mlvwx/slixpublic/ride-share-app:1.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
        resources:
          requests:
            memory: "8Mi"
            cpu: "50m"
          #limits:
          #  memory: "1024Mi"
          #  cpu: "300m"
