13_rideshare/rideshare-service-load.yaml
apiVersion: v1
kind: Service
metadata:
  name: rideshare-load
  namespace: rideshare
  labels:
    app: load-generator
spec:
  selector:
    app: rideshare-load
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
