13_rideshare/rideshare-service-lock.yaml
apiVersion: v1
kind: Service
metadata:
  name: rideshare-lock
  namespace: rideshare
  labels:
    app: rideshare-lock
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 5000
    - port: 5000
      name: http-metrics
      targetPort: 5000
  selector:
    app: rideshare-lock
