13_rideshare/rideshare-service-memory.yaml
apiVersion: v1
kind: Service
metadata:
  name: rideshare-memory 
  namespace: rideshare
  labels:
    app: rideshare-memory 
spec:
  type: ClusterIP 
  ports:
    - port: 80
      name: http
      targetPort: 5000
    - port: 5000
      name: http-metrics
      targetPort: 5000
  selector:
    app: rideshare-memory
