13_rideshare/rideshare-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rideshare # Sets service name
  namespace: rideshare
  labels:
    app: rideshare # Labels and Selectors
spec:
  type: ClusterIP # Sets service type
  ports:
    - port: 80
      name: http
      targetPort: 5000
    - port: 5000
      name: http-metrics
      targetPort: 5000
  selector:
    app: rideshare
