13_rideshare/httproute-load.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rideshare-load
  namespace: rideshare
spec:
  hostnames:
  - rideshare-load.local.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: envoy-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: rideshare-load
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
