13_rideshare/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rideshare
  namespace: rideshare
spec:
  hostnames:
  - rideshare.local.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: envoy-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: rideshare
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
